Add organization autolist

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<br>
 		<label for="organization">服務機構:</label>
 		<input type="text" id="organization" name="organization" required>
+		<div id="autocomplete-list"></div>
 		
 		<br>
 		<label for="unit">單位:</label>
